improved styling and accessibility; update Home page header and CSS for active link styling

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -5,7 +5,9 @@
 
 a.active{
     color: red;
-    font-weight: bold;
+    font-weight: semibold;
     transition: color 0.5s ease-in-out;
-
+    &:hover{
+        color: #059669;
+    }
 }
